--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,67 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>AI Mental Health Chatbot - Home</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form id="login_form">
-      <label for="username">Username</label>
-      <input type="text" id="username" required />
-      
-      <label for="password">Password</label>
-      <input type="password" id="password" required />
-      
-      <button type="submit">Sign In</button>
-    </form>
 
-    <script>
-      const token = localStorage.getItem("authToken");
+  
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">AI Chatbot</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="chat.html">Chat</a></li>
+          <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-      if (token) {
-        fetch("http://127.0.0.1:8000/api/chatbot/validate-token/", {
-          method: "GET",
-          headers: { Authorization: "Bearer " + token },
-        })
-          .then((res) => {
-            if (res.ok) {
-              window.location.href = "/chat.html"; // token is valid
-            } else {
-              localStorage.removeItem("authToken"); // invalid → clear and stay on login page
-            }
-          })
-          .catch(() => {
-            localStorage.removeItem("authToken"); // fallback in case of error
-          });
-      }
+  <div class="container text-center mt-5">
+    <h1>Welcome to AI Mental Health Chatbot</h1>
+    <p>Your personal AI companion to share thoughts and improve mental health.</p>
+    <a href="chat.html" class="btn ai-btn mt-3">Start Chatting</a>
+  </div>
 
-      document.getElementById("login_form").addEventListener("submit", function (e) {
-        e.preventDefault(); 
-
-        const username = document.getElementById("username").value;
-        const password = document.getElementById("password").value;
-
-        fetch("http://127.0.0.1:8000/api/chatbot/login/", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ username: username, password: password }),
-        })
-          .then((res) => res.json())
-          .then((data) => {
-            if (data.status) {
-              if (data.token) {
-                console.log(data.token)
-                localStorage.setItem("authToken", data.token.access);
-              }
-              window.location.href = "/chat.html";
-            } else {
-              alert("Login failed: " + data.message);
-            }
-          })
-          .catch((err) => {
-            console.error("Error:", err);
-            alert("Something went wrong. Try again later!");
-          });
-      });
-    </script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="script.js"></script>
+</body>
 </html>
