--- a/frontend/test/chatbot.html
+++ b/frontend/test/chatbot.html
@@ -14,7 +14,6 @@
       --brand: #2563eb;
       --bot: #e5e7eb;
     }
-
     body {
       margin: 0;
       font-family: Inter, sans-serif;
@@ -25,7 +24,6 @@
       justify-content: center;
       align-items: center;
     }
-
     .chat-card {
       width: 90%;
       max-width: 400px;
@@ -36,87 +34,59 @@
       display: grid;
       grid-template-rows: auto auto 1fr auto;
       overflow: hidden;
-      position: relative;
     }
-
     .topbar {
       display: flex;
       align-items: center;
       justify-content: space-between;
       padding: 10px;
       border-bottom: 1px solid #eee;
-      position: relative;
-      z-index: 15; /* ✅ keeps dropdown above emoji bar */
     }
-
-    /* ✅ Updated Avatar Style with Pointer */
     .bot-avatar {
       background: var(--brand);
-      width: 40px;
-      height: 40px;
+      color: white;
+      width: 30px;
+      height: 30px;
       border-radius: 50%;
       display: flex;
       align-items: center;
       justify-content: center;
-      overflow: hidden;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-      cursor: pointer;
-      transition: transform 0.2s ease;
+      font-weight: 700;
     }
-
-    .bot-avatar:hover {
-      transform: scale(1.05);
-    }
-
-    .bot-avatar img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
     .theme-btn {
       background: none;
       border: none;
       font-size: 1.2rem;
       cursor: pointer;
     }
-
     .mood-bar {
       display: flex;
       overflow-x: auto;
       padding: 10px;
       border-bottom: 1px solid #eee;
-      gap: 8px;
+      gap: 5px;
     }
-
     .mood-btn {
       font-size: 1.4rem;
       cursor: pointer;
       opacity: 0.8;
       transition: 0.2s;
     }
-
     .mood-btn:hover {
       opacity: 1;
       transform: scale(1.1);
     }
-
-    /* ✅ Fixed Dropdown Layer */
     .user-menu {
       position: relative;
-      z-index: 10;
     }
-
     .user-btn {
       background: none;
       border: none;
       cursor: pointer;
       font-weight: 600;
     }
-
     .dropdown {
       position: absolute;
-      top: 100%;
       right: 0;
       background: white;
       border: 1px solid #ddd;
@@ -124,23 +94,15 @@
       box-shadow: 0 3px 6px rgba(0,0,0,0.1);
       display: flex;
       flex-direction: column;
-      z-index: 20; /* ✅ ensures dropdown is above emoji bar */
     }
-
     .dropdown a {
       padding: 10px;
       text-decoration: none;
       color: black;
     }
-
-    .dropdown a:hover {
-      background: #f1f5f9;
-    }
-
     .hidden {
       display: none;
     }
-
     .chat {
       padding: 10px;
       overflow-y: auto;
@@ -148,38 +110,22 @@
       flex-direction: column;
       gap: 8px;
     }
-
-    .row {
-      display: flex;
-    }
-
-    .row.user {
-      justify-content: flex-end;
-    }
-
+    .row { display: flex; }
+    .row.user { justify-content: flex-end; }
     .bubble {
       padding: 10px 14px;
       border-radius: 14px;
       max-width: 70%;
       white-space: pre-wrap;
     }
-
-    .bubble.user {
-      background: var(--brand);
-      color: white;
-    }
-
-    .bubble.bot {
-      background: var(--bot);
-    }
-
+    .bubble.user { background: var(--brand); color: white; }
+    .bubble.bot { background: var(--bot); }
     .composer {
       display: flex;
       gap: 6px;
       padding: 10px;
       border-top: 1px solid #ddd;
     }
-
     .input {
       flex: 1;
       padding: 10px;
@@ -187,7 +133,6 @@
       border-radius: 10px;
       font: inherit;
     }
-
     .send {
       background: var(--brand);
       color: white;
@@ -197,10 +142,7 @@
       cursor: pointer;
       font-weight: 600;
     }
-
-    .send:hover {
-      opacity: 0.9;
-    }
+    .send:hover { opacity: 0.9; }
 
     /* 🌙 Dark Mode */
     body.dark-mode {
@@ -215,21 +157,16 @@
 
   <section class="chat-card">
     <header class="topbar">
-      <!-- ✅ Logo now clickable -->
-      <div class="bot-avatar" id="homeLogo">
-        <img src="logo.png" alt="Bot Logo">
-      </div>
-
+      <div class="bot-avatar">MH</div>
       <div>AI Chatbot</div>
-
       <div class="user-menu">
         <button id="toggleTheme" class="theme-btn">☀️</button>
-        <button id="userDropdown" class="user-btn">👤 Profile ▾</button>
-        <div id="dropdownMenu" class="dropdown hidden">
-          <a href="#" id="profileBtn">Profile</a>
-          <a href="#" id="logoutBtn">Logout</a>
-        </div>
-      </div>
+  <button id="userDropdown" class="user-btn">👤 Profile ▾</button>
+  <div id="dropdownMenu" class="dropdown hidden">
+    <a href="#" id="profileBtn">Profile</a>
+    <a href="#" id="logoutBtn">Logout</a>
+  </div>
+</div>
     </header>
 
     <div class="mood-bar">
@@ -238,17 +175,10 @@
       <span class="mood-btn" data-mood="😡 Feeling Angry">😡</span>
       <span class="mood-btn" data-mood="😰 Feeling Stressed">😰</span>
       <span class="mood-btn" data-mood="😭 Feeling Lonely">😭</span>
-      <span class="mood-btn" data-mood="🤔 Feeling Confused">🤔</span>
-      <span class="mood-btn" data-mood="😍 Feeling In Love">😍</span>
-      <span class="mood-btn" data-mood="😎 Feeling Confident">😎</span>
-      <span class="mood-btn" data-mood="🤯 Feeling Overwhelmed">🤯</span>
-      <span class="mood-btn" data-mood="😇 Feeling Calm">😇</span>
     </div>
 
     <main class="chat" id="chat">
-      <div class="row bot">
-        <div class="bubble bot">Hello 👋 I'm here to listen. How are you feeling today?</div>
-      </div>
+      <div class="row bot"><div class="bubble bot">Hello 👋 I’m here to listen. How are you feeling today?</div></div>
     </main>
 
     <div class="composer">
@@ -258,24 +188,21 @@
   </section>
 
   <script>
+
     const token = localStorage.getItem("authToken");
     if (!token) {
       window.location.href = "login.html";
     }
-    
     const chat = document.getElementById("chat");
     const userInput = document.getElementById("user-input");
     const sendBtn = document.getElementById("send-btn");
     const moodBtns = document.querySelectorAll(".mood-btn");
     const toggleBtn = document.getElementById("toggleTheme");
+
+
     const userDropdown = document.getElementById("userDropdown");
     const dropdownMenu = document.getElementById("dropdownMenu");
     const logoutBtn = document.getElementById("logoutBtn");
-    const homeLogo = document.getElementById("homeLogo");
-
-    homeLogo.addEventListener("click", () => {
-      window.location.href = "index.html"; 
-    });
 
     userDropdown.addEventListener("click", () => {
       dropdownMenu.classList.toggle("hidden");
@@ -286,7 +213,8 @@
       window.location.href = "index.html";
     });
 
-    
+
+    // Add message
     function addMessage(text, sender) {
       const row = document.createElement("div");
       row.className = `row ${sender}`;
@@ -298,6 +226,7 @@
       chat.scrollTop = chat.scrollHeight;
     }
 
+    // Load past messages
     async function loadMessages() {
       try {
         const res = await fetch("http://127.0.0.1:8000/api/chatbot/chat/", {
@@ -315,6 +244,7 @@
 
     loadMessages();
 
+    // Send user message
     async function sendMessage(msg) {
       addMessage(msg, "user");
       try {
@@ -349,6 +279,7 @@
       }
     });
 
+    // Mood buttons
     moodBtns.forEach(btn => {
       btn.addEventListener("click", () => {
         const mood = btn.getAttribute("data-mood");
@@ -356,6 +287,7 @@
       });
     });
 
+    // Theme toggle
     toggleBtn.addEventListener("click", () => {
       document.body.classList.toggle("dark-mode");
       toggleBtn.textContent = document.body.classList.contains("dark-mode") ? "🌙" : "☀️";
