--- a/frontend/test/temp.html
+++ b/frontend/test/temp.html
@@ -14,7 +14,6 @@
       --brand: #2563eb;
       --bot: #e5e7eb;
     }
-
     body {
       margin: 0;
       font-family: Inter, sans-serif;
@@ -25,7 +24,6 @@
       justify-content: center;
       align-items: center;
     }
-
     .chat-card {
       width: 90%;
       max-width: 400px;
@@ -36,17 +34,13 @@
       display: grid;
       grid-template-rows: auto auto 1fr auto;
       overflow: hidden;
-      position: relative;
     }
-
     .topbar {
       display: flex;
       align-items: center;
       justify-content: space-between;
       padding: 10px;
       border-bottom: 1px solid #eee;
-      position: relative;
-      z-index: 15; /* ✅ keeps dropdown above emoji bar */
     }
 
     /* ✅ Updated Avatar Style with Pointer */
@@ -60,7 +54,7 @@
       justify-content: center;
       overflow: hidden;
       box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-      cursor: pointer;
+      cursor: pointer; /* 👈 makes finger pointer */
       transition: transform 0.2s ease;
     }
 
@@ -80,43 +74,34 @@
       font-size: 1.2rem;
       cursor: pointer;
     }
-
     .mood-bar {
       display: flex;
       overflow-x: auto;
       padding: 10px;
       border-bottom: 1px solid #eee;
-      gap: 8px;
+      gap: 5px;
     }
-
     .mood-btn {
       font-size: 1.4rem;
       cursor: pointer;
       opacity: 0.8;
       transition: 0.2s;
     }
-
     .mood-btn:hover {
       opacity: 1;
       transform: scale(1.1);
     }
-
-    /* ✅ Fixed Dropdown Layer */
     .user-menu {
       position: relative;
-      z-index: 10;
     }
-
     .user-btn {
       background: none;
       border: none;
       cursor: pointer;
       font-weight: 600;
     }
-
     .dropdown {
       position: absolute;
-      top: 100%;
       right: 0;
       background: white;
       border: 1px solid #ddd;
@@ -124,23 +109,15 @@
       box-shadow: 0 3px 6px rgba(0,0,0,0.1);
       display: flex;
       flex-direction: column;
-      z-index: 20; /* ✅ ensures dropdown is above emoji bar */
     }
-
     .dropdown a {
       padding: 10px;
       text-decoration: none;
       color: black;
     }
-
-    .dropdown a:hover {
-      background: #f1f5f9;
-    }
-
     .hidden {
       display: none;
     }
-
     .chat {
       padding: 10px;
       overflow-y: auto;
@@ -148,38 +125,22 @@
       flex-direction: column;
       gap: 8px;
     }
-
-    .row {
-      display: flex;
-    }
-
-    .row.user {
-      justify-content: flex-end;
-    }
-
+    .row { display: flex; }
+    .row.user { justify-content: flex-end; }
     .bubble {
       padding: 10px 14px;
       border-radius: 14px;
       max-width: 70%;
       white-space: pre-wrap;
     }
-
-    .bubble.user {
-      background: var(--brand);
-      color: white;
-    }
-
-    .bubble.bot {
-      background: var(--bot);
-    }
-
+    .bubble.user { background: var(--brand); color: white; }
+    .bubble.bot { background: var(--bot); }
     .composer {
       display: flex;
       gap: 6px;
       padding: 10px;
       border-top: 1px solid #ddd;
     }
-
     .input {
       flex: 1;
       padding: 10px;
@@ -187,7 +148,6 @@
       border-radius: 10px;
       font: inherit;
     }
-
     .send {
       background: var(--brand);
       color: white;
@@ -197,10 +157,7 @@
       cursor: pointer;
       font-weight: 600;
     }
-
-    .send:hover {
-      opacity: 0.9;
-    }
+    .send:hover { opacity: 0.9; }
 
     /* 🌙 Dark Mode */
     body.dark-mode {
@@ -221,7 +178,6 @@
       </div>
 
       <div>AI Chatbot</div>
-
       <div class="user-menu">
         <button id="toggleTheme" class="theme-btn">☀️</button>
         <button id="userDropdown" class="user-btn">👤 Profile ▾</button>
@@ -238,17 +194,10 @@
       <span class="mood-btn" data-mood="😡 Feeling Angry">😡</span>
       <span class="mood-btn" data-mood="😰 Feeling Stressed">😰</span>
       <span class="mood-btn" data-mood="😭 Feeling Lonely">😭</span>
-      <span class="mood-btn" data-mood="🤔 Feeling Confused">🤔</span>
-      <span class="mood-btn" data-mood="😍 Feeling In Love">😍</span>
-      <span class="mood-btn" data-mood="😎 Feeling Confident">😎</span>
-      <span class="mood-btn" data-mood="🤯 Feeling Overwhelmed">🤯</span>
-      <span class="mood-btn" data-mood="😇 Feeling Calm">😇</span>
     </div>
 
     <main class="chat" id="chat">
-      <div class="row bot">
-        <div class="bubble bot">Hello 👋 I'm here to listen. How are you feeling today?</div>
-      </div>
+      <div class="row bot"><div class="bubble bot">Hello 👋 I’m here to listen. How are you feeling today?</div></div>
     </main>
 
     <div class="composer">
@@ -258,11 +207,6 @@
   </section>
 
   <script>
-    const token = localStorage.getItem("authToken");
-    if (!token) {
-      window.location.href = "login.html";
-    }
-    
     const chat = document.getElementById("chat");
     const userInput = document.getElementById("user-input");
     const sendBtn = document.getElementById("send-btn");
@@ -273,8 +217,9 @@
     const logoutBtn = document.getElementById("logoutBtn");
     const homeLogo = document.getElementById("homeLogo");
 
+    // 👇 Click on logo => Go to main page
     homeLogo.addEventListener("click", () => {
-      window.location.href = "index.html"; 
+      window.location.href = "index.html"; // ✅ redirect to main page
     });
 
     userDropdown.addEventListener("click", () => {
@@ -286,50 +231,47 @@
       window.location.href = "index.html";
     });
 
-    
+    // Add message
     function addMessage(text, sender) {
       const row = document.createElement("div");
-      row.className = `row ${sender}`;
+      row.className = row `${sender} `;
       const bubble = document.createElement("div");
-      bubble.className = `bubble ${sender}`;
+      bubble.className = bubble `${sender}`;
       bubble.innerText = text;
       row.appendChild(bubble);
       chat.appendChild(row);
       chat.scrollTop = chat.scrollHeight;
     }
 
+    // Load past messages
     async function loadMessages() {
       try {
-        const res = await fetch("http://127.0.0.1:8000/api/chatbot/chat/", {
-          headers: { "Authorization": token ? "Bearer " + token : "" },
-        });
+        const res = await fetch("http://127.0.0.1:8000/api/chatbot/chat/");
         const data = await res.json();
         data.forEach(m => {
           addMessage(m.message, "user");
           addMessage(m.response || "No response from server", "bot");
         });
       } catch {
-        addMessage("⚠️ Could not connect to server.", "bot");
+        addMessage("⚠ Could not connect to server.", "bot");
       }
     }
 
     loadMessages();
 
+    // Send user message
     async function sendMessage(msg) {
       addMessage(msg, "user");
       try {
         const res = await fetch("http://127.0.0.1:8000/api/chatbot/chat/", {
           method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-            "Authorization": token ? "Bearer " + token : ""
-          },
+          headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ user_message: msg }),
         });
         const data = await res.json();
         addMessage(data.response || "No response from server", "bot");
       } catch {
-        addMessage("⚠️ Error connecting to server.", "bot");
+        addMessage("⚠ Error connecting to server.", "bot");
       }
     }
 
@@ -349,6 +291,7 @@
       }
     });
 
+    // Mood buttons
     moodBtns.forEach(btn => {
       btn.addEventListener("click", () => {
         const mood = btn.getAttribute("data-mood");
@@ -356,9 +299,10 @@
       });
     });
 
+    // Theme toggle
     toggleBtn.addEventListener("click", () => {
       document.body.classList.toggle("dark-mode");
-      toggleBtn.textContent = document.body.classList.contains("dark-mode") ? "🌙" : "☀️";
+      toggleBtn.textContent = document.body.classList.contains("dark-mode") ? "🌙" : "☀";
     });
   </script>
 </body>
