--- a/frontend/chat.html
+++ b/frontend/chat.html
@@ -6,210 +6,7 @@
   <title>AI Mental Health Chatbot</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-  <style>
-    :root {
-      --bg: #f4f6fb;
-      --panel: #ffffff;
-      --ink: #0f172a;
-      --brand: #2563eb;
-      --bot: #e5e7eb;
-    }
-
-    body {
-      margin: 0;
-      font-family: Inter, sans-serif;
-      background: linear-gradient(120deg, var(--bg), #eef2ff 60%, var(--bg));
-      color: var(--ink);
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .chat-card {
-      width: 90%;
-      max-width: 400px;
-      height: 90vh;
-      background: var(--panel);
-      border-radius: 20px;
-      box-shadow: 0 6px 20px rgba(0,0,0,.15);
-      display: grid;
-      grid-template-rows: auto auto 1fr auto;
-      overflow: hidden;
-      position: relative;
-    }
-
-    .topbar {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 10px;
-      border-bottom: 1px solid #eee;
-      position: relative;
-      z-index: 15; /* ✅ keeps dropdown above emoji bar */
-    }
-
-    /* ✅ Updated Avatar Style with Pointer */
-    .bot-avatar {
-      background: var(--brand);
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      overflow: hidden;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-      cursor: pointer;
-      transition: transform 0.2s ease;
-    }
-
-    .bot-avatar:hover {
-      transform: scale(1.05);
-    }
-
-    .bot-avatar img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
-    .theme-btn {
-      background: none;
-      border: none;
-      font-size: 1.2rem;
-      cursor: pointer;
-    }
-
-    .mood-bar {
-      display: flex;
-      overflow-x: auto;
-      padding: 10px;
-      border-bottom: 1px solid #eee;
-      gap: 8px;
-    }
-
-    .mood-btn {
-      font-size: 1.4rem;
-      cursor: pointer;
-      opacity: 0.8;
-      transition: 0.2s;
-    }
-
-    .mood-btn:hover {
-      opacity: 1;
-      transform: scale(1.1);
-    }
-
-    /* ✅ Fixed Dropdown Layer */
-    .user-menu {
-      position: relative;
-      z-index: 10;
-    }
-
-    .user-btn {
-      background: none;
-      border: none;
-      cursor: pointer;
-      font-weight: 600;
-    }
-
-    .dropdown {
-      position: absolute;
-      top: 100%;
-      right: 0;
-      background: white;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      box-shadow: 0 3px 6px rgba(0,0,0,0.1);
-      display: flex;
-      flex-direction: column;
-      z-index: 20; /* ✅ ensures dropdown is above emoji bar */
-    }
-
-    .dropdown a {
-      padding: 10px;
-      text-decoration: none;
-      color: black;
-    }
-
-    .dropdown a:hover {
-      background: #f1f5f9;
-    }
-
-    .hidden {
-      display: none;
-    }
-
-    .chat {
-      padding: 10px;
-      overflow-y: auto;
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-    }
-
-    .row {
-      display: flex;
-    }
-
-    .row.user {
-      justify-content: flex-end;
-    }
-
-    .bubble {
-      padding: 10px 14px;
-      border-radius: 14px;
-      max-width: 70%;
-      white-space: pre-wrap;
-    }
-
-    .bubble.user {
-      background: var(--brand);
-      color: white;
-    }
-
-    .bubble.bot {
-      background: var(--bot);
-    }
-
-    .composer {
-      display: flex;
-      gap: 6px;
-      padding: 10px;
-      border-top: 1px solid #ddd;
-    }
-
-    .input {
-      flex: 1;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 10px;
-      font: inherit;
-    }
-
-    .send {
-      background: var(--brand);
-      color: white;
-      border: none;
-      border-radius: 10px;
-      padding: 0 16px;
-      cursor: pointer;
-      font-weight: 600;
-    }
-
-    .send:hover {
-      opacity: 0.9;
-    }
-
-    /* 🌙 Dark Mode */
-    body.dark-mode {
-      --bg: #0f172a;
-      --panel: #1e293b;
-      --ink: #f1f5f9;
-      --bot: #334155;
-    }
-  </style>
+  <link rel="stylesheet" href="chat.css">
 </head>
 <body>
 
@@ -233,7 +30,7 @@
     </header>
 
     <div class="mood-bar">
-      <span class="mood-btn" data-mood="😊 Feeling Happy">😊</span>
+      <span class="mood-btn" data-mood="😊 Feeling Happy" >😊</span>
       <span class="mood-btn" data-mood="😢 Feeling Sad">😢</span>
       <span class="mood-btn" data-mood="😡 Feeling Angry">😡</span>
       <span class="mood-btn" data-mood="😰 Feeling Stressed">😰</span>
@@ -257,109 +54,6 @@
     </div>
   </section>
 
-  <script>
-    const token = localStorage.getItem("authToken");
-    if (!token) {
-      window.location.href = "login.html";
-    }
-    
-    const chat = document.getElementById("chat");
-    const userInput = document.getElementById("user-input");
-    const sendBtn = document.getElementById("send-btn");
-    const moodBtns = document.querySelectorAll(".mood-btn");
-    const toggleBtn = document.getElementById("toggleTheme");
-    const userDropdown = document.getElementById("userDropdown");
-    const dropdownMenu = document.getElementById("dropdownMenu");
-    const logoutBtn = document.getElementById("logoutBtn");
-    const homeLogo = document.getElementById("homeLogo");
-
-    homeLogo.addEventListener("click", () => {
-      window.location.href = "index.html"; 
-    });
-
-    userDropdown.addEventListener("click", () => {
-      dropdownMenu.classList.toggle("hidden");
-    });
-
-    logoutBtn.addEventListener("click", () => {
-      localStorage.removeItem("authToken");
-      window.location.href = "index.html";
-    });
-
-    
-    function addMessage(text, sender) {
-      const row = document.createElement("div");
-      row.className = `row ${sender}`;
-      const bubble = document.createElement("div");
-      bubble.className = `bubble ${sender}`;
-      bubble.innerText = text;
-      row.appendChild(bubble);
-      chat.appendChild(row);
-      chat.scrollTop = chat.scrollHeight;
-    }
-
-    async function loadMessages() {
-      try {
-        const res = await fetch("http://127.0.0.1:8000/api/chatbot/chat/", {
-          headers: { "Authorization": token ? "Bearer " + token : "" },
-        });
-        const data = await res.json();
-        data.forEach(m => {
-          addMessage(m.message, "user");
-          addMessage(m.response || "No response from server", "bot");
-        });
-      } catch {
-        addMessage("⚠️ Could not connect to server.", "bot");
-      }
-    }
-
-    loadMessages();
-
-    async function sendMessage(msg) {
-      addMessage(msg, "user");
-      try {
-        const res = await fetch("http://127.0.0.1:8000/api/chatbot/chat/", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-            "Authorization": token ? "Bearer " + token : ""
-          },
-          body: JSON.stringify({ user_message: msg }),
-        });
-        const data = await res.json();
-        addMessage(data.response || "No response from server", "bot");
-      } catch {
-        addMessage("⚠️ Error connecting to server.", "bot");
-      }
-    }
-
-    sendBtn.addEventListener("click", () => {
-      const msg = userInput.value.trim();
-      if (!msg) return;
-      sendMessage(msg);
-      userInput.value = "";
-    });
-
-    userInput.addEventListener("keydown", (e) => {
-      if (e.key === "Enter") {
-        e.preventDefault();
-        const msg = userInput.value.trim();
-        if (msg) sendMessage(msg);
-        userInput.value = "";
-      }
-    });
-
-    moodBtns.forEach(btn => {
-      btn.addEventListener("click", () => {
-        const mood = btn.getAttribute("data-mood");
-        sendMessage(mood);
-      });
-    });
-
-    toggleBtn.addEventListener("click", () => {
-      document.body.classList.toggle("dark-mode");
-      toggleBtn.textContent = document.body.classList.contains("dark-mode") ? "🌙" : "☀️";
-    });
-  </script>
+  <script src="chat.js"></script>
 </body>
 </html>
