--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,7 +29,7 @@
   <div class="container text-center mt-5">
     <h1>Welcome to AI Mental Health Chatbot</h1>
     <p>Your personal AI companion to share thoughts and improve mental health.</p>
-    <a href="chat.html" class="btn ai-btn mt-3">Start Chatting</a>
+    <a href="home.html" class="btn ai-btn mt-3">Start Chatting</a>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
